--- a/modCFML/apache-ajp-proxy/sites-enabled/default.conf
+++ b/modCFML/apache-ajp-proxy/sites-enabled/default.conf
@@ -2,9 +2,7 @@ RequestHeader set X-ModCFML-SharedKey modcfmlsecret
 
 <VirtualHost *:8080>
         ServerName site1.com
-        DocumentRoot /C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site1\
-
-        RequestHeader set X-Tomcat-DocRoot C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site1\
+        RequestHeader set X-Tomcat-DocRoot ${modCFMLBaseDir}site1
 
         ProxyPass / ajp://host.docker.internal:8009/ secret=ajpsecret
 
@@ -14,9 +12,7 @@ RequestHeader set X-ModCFML-SharedKey modcfmlsecret
 
 <VirtualHost *:8080>
         ServerName site2.com
-        DocumentRoot /C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site2\
-
-        RequestHeader set X-Tomcat-DocRoot C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site2\
+        RequestHeader set X-Tomcat-DocRoot ${modCFMLBaseDir}site2
 
         ProxyPass / ajp://host.docker.internal:8009/ secret=ajpsecret
 
@@ -26,9 +22,7 @@ RequestHeader set X-ModCFML-SharedKey modcfmlsecret
 
 <VirtualHost *:8080>
         ServerName site3.com
-        DocumentRoot /C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site3\
-
-        RequestHeader set X-Tomcat-DocRoot C:\Users\Brad\Documents\GitHub\commandbox-tests\modCFML\site3\
+        RequestHeader set X-Tomcat-DocRoot ${modCFMLBaseDir}site3
 
         ProxyPass / ajp://host.docker.internal:8009/ secret=ajpsecret
 
