--- a/apache-ajp-docker/Dockerfile
+++ b/apache-ajp-docker/Dockerfile
@@ -16,6 +16,10 @@ RUN ansible-playbook -i "localhost," -c local /etc/ansible/site.yml
 RUN apt-get -y remove ansible python3-apt;apt-get -y autoremove
 
 RUN echo "Listen 8080" > /etc/apache2/ports.conf
+RUN echo "Listen 8081" >> /etc/apache2/ports.conf
+RUN echo "Listen 8082" >> /etc/apache2/ports.conf
+RUN echo "Listen 8083" >> /etc/apache2/ports.conf
+RUN echo "Listen 8084" >> /etc/apache2/ports.conf
 RUN echo 'ServerName localhost' >> /etc/apache2/apache2.conf
 
 
@@ -24,6 +28,10 @@ COPY docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
 EXPOSE 8080
+EXPOSE 8081
+EXPOSE 8082
+EXPOSE 8083
+EXPOSE 8084
 
 EXPOSE 8443
 
